; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/mkimg/extr_gpt.c_gpt_metadata.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/mkimg/extr_gpt.c_gpt_metadata.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SCHEME_META_IMG_START = common dso_local global i64 0, align 8
@SCHEME_META_IMG_END = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i32)* @gpt_metadata to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gpt_metadata(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i64, i64* %3, align 8
  %6 = load i64, i64* @SCHEME_META_IMG_START, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %12, label %8

8:                                                ; preds = %2
  %9 = load i64, i64* %3, align 8
  %10 = load i64, i64* @SCHEME_META_IMG_END, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %12, label %25

12:                                               ; preds = %8, %2
  %13 = call i64 (...) @gpt_tblsz()
  %14 = load i32, i32* %4, align 4
  %15 = sext i32 %14 to i64
  %16 = add nsw i64 %15, %13
  %17 = trunc i64 %16 to i32
  store i32 %17, i32* %4, align 4
  %18 = load i64, i64* %3, align 8
  %19 = load i64, i64* @SCHEME_META_IMG_START, align 8
  %20 = icmp eq i64 %18, %19
  %21 = zext i1 %20 to i64
  %22 = select i1 %20, i32 2, i32 1
  %23 = load i32, i32* %4, align 4
  %24 = add nsw i32 %23, %22
  store i32 %24, i32* %4, align 4
  br label %25

25:                                               ; preds = %12, %8
  %26 = load i32, i32* %4, align 4
  %27 = call i32 @round_block(i32 %26)
  ret i32 %27
}

declare dso_local i64 @gpt_tblsz(...) #1

declare dso_local i32 @round_block(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
